gdk-pixbuf-xlib: Mark public funcs _GDK_PIXBUF_EXTERN

Without this, the meson-built libgdk_pixbuf_xlib has no exports at all.

https://bugzilla.gnome.org/show_bug.cgi?id=786232